--- a/README.html
+++ b/README.html
@@ -18,6 +18,13 @@
       <th>url</th>
     </tr>
     <tr>
+      <td>nodup</td>
+      <td>No Duplicates</td>
+      <td>[Python]</td>
+      <td>1.4</td>
+      <td><a href="https://open.kattis.com/problems/nodup">link</a></td>
+    </tr>
+    <tr>
       <td>apaxiaaans</td>
       <td>Apaxiaaaaaaaaaaaans!</td>
       <td>[Python]</td>
